# python-packages

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
grdException/: AddException.py  ContinueLoopException.py  ReadException.py  ReadFileException.py  TransactionException.py  UnexpectedValuesException.py  WriteFileException.py
grdExceptions/: ListException.py
grdService/: BaseEntity.py  BaseService.py
grdUtil/: BashColor.py  DateTimeObject.py  DateTimeUtil.py  DocUtil.py  FilePathObject.py  FileUtil.py  FlagValues.py  InputUtil.py  JsonUtil.py  ListUtil.py  LocalJsonRepository.py  LogLevel.py  LogObject.py  LogUtil.py  ParsedArgs.py  PathUtil.py  PrintUtil.py  ShellUtil.py  StaticUtil.py  StrUtil.py  WebUtil.py
grdUtil/Argumentor/: ArgResult.py  ArgValue.py  ArgsResult.py  Argument.py  Argumentor.py  Command.py  Commands.py
grdUtil/service/: ExampleService.py
myutil/: BashColors.py  DateTimeObject.py  FilePathObject.py  FileUtil.py  HttpVerb.py  InputUtil.py  JsonUtil.py  LocalJsonRepository.py  PrintUtil.py  ShellType.py  ShellUtil.py  Util.py  WebUtil.py
myutil/service/: Example.py  ExampleService.py
