[build-system]
requires = ["setuptools >= 61.0", "setuptools_scm >= 8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "GrdUtil"
dynamic = ["version", "dependencies"]
description = "Various Python utility methods, printing, input handling, colouring text in Bash, and more"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Gardehal"}]

[tool.setuptools]
py-modules = []

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"

[project.urls]
Homepage = "https://pypi.org/project/grdutil"
Repository = "https://github.com/gardehal/python-packages"